--- a/Src/botconfig.json
+++ b/Src/botconfig.json
@@ -2,9 +2,10 @@
   "currentguildid": "959904483394064414",
   "publiclogchannelid": "978388821538402365",
   "techlogid": "978388803683246140",
+  "notifyformanagerchannelid": "979753925932625960",
 
   "bulletproofreponame": "bulletproofs",
   "materialsreponame": "materials",
-  "pricetocraftbulletperoof" :  3
+  "pricetocraftbulletperoof": 3
 
 }
