--- a/Src/Src.csproj
+++ b/Src/Src.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -15,6 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Chinzano\Middleware.csproj" />
     <ProjectReference Include="..\Data\Data.csproj" />
+    <ProjectReference Include="..\Shop\Shop.csproj" />
   </ItemGroup>
 
   <ItemGroup>
