--- a/Src/botconfig.json
+++ b/Src/botconfig.json
@@ -3,6 +3,8 @@
   "publiclogchannelid": "979795475911807046",
   "techlogid": "979795493024592003",
   "notifyformanagerchannelid": "979795788920143912",
+  "orderarchivechannelid": "980245039919816804",
+
 
   "bulletproofreponame": "bulletproofs",
   "materialsreponame": "materials",
