Micro updated and bugfix

--- a/Src/Src.csproj
+++ b/Src/Src.csproj
@@ -20,7 +20,7 @@
 
   <ItemGroup>
     <None Update="botconfig.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
