--- a/Src/botconfig.json
+++ b/Src/botconfig.json
@@ -1,5 +1,5 @@
 {
-  "currentguildid": "959904483394064414",
+  "currentguildid": "1",
   "publiclogchannelid": "980826560435204137",
   "techlogid": "980826575471800380",
   "notifyformanagerchannelid": "980826516843806770",
