--- a/Src/botconfig.json
+++ b/Src/botconfig.json
@@ -4,7 +4,7 @@
   "techlogid": "980826575471800380",
   "notifyformanagerchannelid": "980826516843806770",
   "orderarchivechannelid": "980826618966712320",
-
+  "moneylogchannelid": "1",
 
   "bulletproofreponame": "bulletproofs",
   "materialsreponame": "materials",
